--- a/Cars/Podfile
+++ b/Cars/Podfile
@@ -4,7 +4,15 @@
 target 'Cars' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'RxAlamofire+ObjectMapper'
+  pod 'AlamofireObjectMapper'
+  pod 'RxCocoa',    '~> 4.0'
+  pod 'JGProgressHUD'
+  pod 'MJSnackBar'
+  pod 'PopItUp'
+  pod 'Hue'
+  pod 'Localize' , '~> 2.0.5'
+  pod 'SwiftEventBus'
   # Pods for Cars
 
   target 'CarsTests' do
